Bug 1677747: Trust the caller's error handling on shutdown rather than assert. r=dom-workers-and-storage-reviewers,asuth

Differential Revision: https://phabricator.services.mozilla.com/D97487